--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Juan Ignacio Gidoni - React Developer and Multimedia Designer</title>
+  <title>Juan Ignacio Gidoni - Portfolio</title>
 </head>
 
 <body>
